[package]
name = "bevy_iced"
version = "0.5.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.14"
bevy_derive = "0.14"
bevy_ecs = "0.14"
bevy_input = "0.14"
bevy_math = "0.14"
bevy_render = "0.14"
bevy_utils = "0.14"
bevy_window = "0.14"

# iced_core = "0.12"
# iced_runtime = "0.12"
# iced_wgpu = "0.12"
# iced_widget = "0.12"
# iced_renderer = { version = "0.12", features = ["wgpu"] }
# NOTE: temp fork for https://github.com/iced-rs/iced/pull/2510
iced_core = { git = "https://github.com/tzemanovic/iced.git", rev = "a594033be7d3ed2ec20967de93bf62c4013088f3" }
iced_runtime = { git = "https://github.com/tzemanovic/iced.git", rev = "a594033be7d3ed2ec20967de93bf62c4013088f3" }
iced_wgpu = { git = "https://github.com/tzemanovic/iced.git", rev = "a594033be7d3ed2ec20967de93bf62c4013088f3" }
iced_widget = { git = "https://github.com/tzemanovic/iced.git", rev = "a594033be7d3ed2ec20967de93bf62c4013088f3" }
iced_renderer = { git = "https://github.com/tzemanovic/iced.git", rev = "a594033be7d3ed2ec20967de93bf62c4013088f3" , features = ["wgpu"] }

[dev-dependencies]
bevy = "0.14"
rand = "0.8"